# kafka_anonymizer

./: .gitignore  CMakeLists.txt  GrafanaDashboard.json  README.md  conanfile.py  conanfile.txt  docker-compose.yml  requirements.txt
config/: config.json
docker/anonymizer/: Dockerfile  anonymizer
docker/anonymizer/config/: config.json
docker/clickhouse/: Dockerfile  config.xml  http_log.capnp  initdb.sh  schema.sql
etc/prometheus/: prometheus.yml
grafana/dashboards/: My dashboard-1760881753028.json  My dashboard-1760963019542.json
grafana/plugins/grafana-clickhouse-datasource/: MANIFEST.txt
grafana/provisioning/datasources/: datasource.yaml
include/: ConfigBasedFactory.h  Consumer.h  General.h  ThreadsafeQueue.h  htto_log.h
src/: ConfigBasedFactory.cpp  capnpClient.cpp  main.cpp
